# libbladerf-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  MAINTAINERS.md  README.md  TODO.md  check.sh  cliff.toml  deny.toml  release.sh  release.toml  rustfmt.toml
.agents/skills/conventional-commits/: SKILL.md
.agents/skills/rust-dsp/: 00_methodology.md  10_build_and_portability.md  20_architecture_and_api.md  30_memory_and_data.md  31_realtime_determinism.md  32_concurrency_and_control.md  33_numerical_precision.md  34_unsafe_and_simd_soundness.md  SKILL.md
.agents/skills/rust-lang/: 01_naming.md  02_interoperability.md  03_macros.md  04_documentation.md  05_predictability.md  06_flexibility.md  07_type_safety.md  08_dependability.md  09_debuggability.md  10_future_proofing.md  11_necessities.md  SKILL.md
.agents/skills/rust-ms/: 01_ai_guidelines.md  02_application_guidelines.md  03_documentation.md  04_ffi_guidelines.md  05_library_guidelines.md  06_performance_guidelines.md  07_safety_guidelines.md  08_universal_guidelines.md  09_libraries_building_guidelines.md  10_libraries_interoperability_guidelines.md  11_libraries_resilience_guidelines.md  12_libraries_ux_guidelines.md  SKILL.md
.cargo/: config.toml
.github/actions/check/: action.yml
.github/workflows/: ci.yml  release.yml  rust.yml
.husky/: commit-msg
benches/: hardware_calibration_bench.rs  hardware_gain_bench.rs  hardware_gpio_bench.rs  hardware_nios_bench.rs  hardware_stream_build_teardown_bench.rs  hardware_stream_latency_bench.rs  hardware_tuning_bench.rs  metadata_header_bench.rs  nios_packet_bench.rs  sample_format_bench.rs
crates/bladerf-globals/: Cargo.toml
crates/bladerf-globals/src/: bladerf1.rs  bladerf2.rs  lib.rs  range.rs
crates/bladerf-nios/: Cargo.toml  README.md  TODO.md
crates/bladerf-nios/examples/: packet.rs  packet_retune.rs  packet_retune2.rs
crates/bladerf-nios/src/: lib.rs  packet.rs  packet_base.rs  packet_generic.rs  packet_retune.rs  packet_retune2.rs
crates/bladerf-nios/tests/: packet.rs  packet_generic.rs  packet_retune.rs  packet_retune2.rs
crates/libnios-rs/: Cargo.toml  README.md
crates/libnios-rs/examples/: default.rs
crates/libnios-rs/src/: packet.rs
crates/libnios-rs/tests/: default.rs
crates/libnios-rs/todo/: constants_sdr.rs
examples/: buffertest.rs  info.rs  retune.rs
examples/calibrate/: AGENTS.md  Cargo.toml
examples/calibrate/src/: main.rs
examples/dc_cal_table/: AGENTS.md  Cargo.toml
examples/dc_cal_table/src/: main.rs
examples/flash_firmware/: AGENTS.md  Cargo.toml
examples/flash_firmware/src/: main.rs
examples/flash_fpga/: AGENTS.md  Cargo.toml
examples/flash_fpga/src/: main.rs
examples/info/: AGENTS.md  Cargo.toml
examples/info/src/: main.rs
examples/kalibrate/: AGENTS.md  Cargo.toml  INTENT.md  PLAN.md  README.md  STATUS.md
examples/kalibrate-5g/: AGENTS.md  Cargo.toml
examples/kalibrate-5g/.opencode/plans/: project-status.md
examples/kalibrate-5g/benches/: convert_bench.rs  detect_bench.rs  pss_bench.rs
examples/kalibrate-5g/src/: detect.rs  factory.rs  gscn.rs  main.rs  offset.rs  pss.rs  source.rs
examples/kalibrate/src/: arfcn.rs  factory.rs  fcch.rs  main.rs  offset.rs  source.rs
examples/rx_tx/: AGENTS.md  Cargo.toml
examples/rx_tx/src/: main.rs
scripts/: changelog.sh  check.sh
src/: bladerf.rs  bladerf1.rs  bladerf2.rs  board.rs  channel.rs  error.rs  flash.rs  lib.rs  nios.rs  nios_client.rs  protocol.rs  range.rs  transport.rs  usb.rs  version.rs
src/bladerf1/: board.rs  calibration.rs  hardware.rs  nios_client.rs  protocol.rs
src/bladerf1/board/: bandwidth.rs  calibration.rs  corrections.rs  dac_trim.rs  firmware.rs  flash.rs  fpga.rs  frequency.rs  gain.rs  loopback.rs  lpf_mode.rs  rf_port.rs  rx_mux.rs  sample_rate.rs  smb.rs  stream.rs  timestamp.rs  trigger.rs  vctcxo_tamer.rs  xb.rs
src/bladerf1/hardware/: dac161s055.rs  lms6002d.rs  si5338.rs  spi_flash.rs
src/bladerf1/protocol/: packet_retune.rs
src/board/: bladerf1.rs  bladerf2.rs
src/board/bladerf1/: bandwidth.rs  basic.rs  corrections.rs  expansion_boards.rs  (+11 more)
src/hardware/: dac161s055.rs  lms6002d.rs  lms6002d_x.rs~  si5338.rs
src/nios/: constants.rs  packet_base.rs  packet_generic.rs  packet_retune.rs  packet_retune2.rs
src/protocol/: nios.rs
src/transport/: mock.rs  usb.rs
tests/: README.md  bladerf1_bandwidth.rs  bladerf1_correction.rs  bladerf1_expansion_boards.rs  bladerf1_frequency.rs  bladerf1_gain.rs  bladerf1_loopback.rs  bladerf1_nios_packet_etune.rs  bladerf1_open.rs  bladerf1_rx_mux.rs  bladerf1_sample_rate.rs  bladerf1_stream.rs  bladerf2_nios_packet_etune.rs  integration_bladerf1_bandwidth.rs  integration_bladerf1_correction.rs  integration_bladerf1_expansion.rs  integration_bladerf1_frequency.rs  integration_bladerf1_gain.rs  integration_bladerf1_loopback.rs  integration_bladerf1_open.rs  integration_bladerf1_rx_mux.rs  integration_bladerf1_sample_rate.rs  integration_bladerf1_stream.rs  nios_packet_generic.rs  nios_packet_retune.rs  nios_packet_retune2.rs  unit_bladerf1_nios_retune.rs  unit_bladerf2_nios_retune.rs  unit_mock_transport.rs  unit_nios_packet.rs
tests/bladerf1/: bandwidth.rs  correction.rs  dc_cal_table.rs  dc_calibration.rs  flash.rs  fpga.rs  frequency.rs  gain.rs  loopback.rs  main.rs  open.rs  rx_mux.rs  sample_rate.rs  xb200.rs  xb200_frequency.rs
tests/common/: mod.rs
tests/unit/: bladerf1_nios_retune.rs  dc_cal_table.rs  flash.rs  main.rs  nios_packet.rs  range.rs  sample_format.rs
(+20 files in other folders)
