[package]
name = "libbladerf-rs"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
authors = ["Ratzrattillo <11601995+ratzrattillo@users.noreply.github.com>"]
repository = "https://github.com/ratzrattillo/seify-bladerf"
readme = "README.md"
description = "Fully Rust native BladeRF driver"
license = "Apache-2.0"
keywords = ["sdr", "rf", "bladerf"]
categories = [
    "asynchronous",
    "hardware-support",
    "science",
]

[workspace]
members = [".", "examples/calibrate", "examples/info", "examples/rx_tx"]

[dependencies]
thiserror = "2.0"
nusb = "0.2"
log = "0.4"

[dev-dependencies]
env_logger = "0.11"

[features]
default = ["bladerf1"]

# BladeRF1 support (x40/x115)
bladerf1 = []

# BladeRF2 support (xA4/xA9)
bladerf2 = []

# Configure docs.rs to show all features
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
