[package]
name = "libbladerf-rs"
version = "0.4.1"
edition = "2024"
rust-version = "1.96"
authors = ["Ratzrattillo <11601995+ratzrattillo@users.noreply.github.com>"]
repository = "https://github.com/ratzrattillo/seify-bladerf"
readme = "README.md"
description = "Fully Rust native BladeRF driver"
license = "Apache-2.0"
keywords = ["sdr", "rf", "bladerf"]
categories = [
    "hardware-support",
    "science",
]

[workspace]
members = [".", "examples/calibrate", "examples/dc_cal_table", "examples/flash_firmware", "examples/flash_fpga", "examples/info", "examples/rx_tx"]

[dependencies]
thiserror = "2.0"
nusb = "0.2"
log = "0.4"
num-complex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
env_logger = "0.11"

[features]
default = ["xb100", "xb200", "xb300"]

# BladeRF1 support (x40/x115)
bladerf1 = []

# BladeRF2 support (xA4/xA9)
bladerf2 = []

# Expansion board support (requires bladerf1)
xb100 = ["bladerf1"]
xb200 = ["bladerf1"]
xb300 = ["bladerf1"]

# Configure docs.rs to show all features
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.prof]
inherits = "release"
debug = true
lto = false

[[test]]
name = "bladerf1"
path = "tests/bladerf1/main.rs"
required-features = ["bladerf1"]

[[test]]
name = "unit"
path = "tests/unit/main.rs"

[[bench]]
name = "nios_packet_bench"
harness = false

[[bench]]
name = "sample_format_bench"
harness = false

[[bench]]
name = "metadata_header_bench"
harness = false

[[bench]]
name = "hardware_gpio_bench"
harness = false
required-features = ["bladerf1"]

[[bench]]
name = "hardware_tuning_bench"
harness = false
required-features = ["bladerf1"]

[[bench]]
name = "hardware_stream_latency_bench"
harness = false
required-features = ["bladerf1"]

[[bench]]
name = "hardware_stream_build_teardown_bench"
harness = false
required-features = ["bladerf1"]

[[bench]]
name = "hardware_gain_bench"
harness = false
required-features = ["bladerf1"]

[[bench]]
name = "hardware_calibration_bench"
harness = false
required-features = ["bladerf1"]
