[package]
name = "kalibrate-5g"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
env_logger = "0.11"
libbladerf-rs = { path = "../.." }
minreq = { version = "3.0.0-rc.0", features = ["https-rustls"] }
nusb = "0.2"
rustfft = "6.4"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "pss_bench"
harness = false

[[bench]]
name = "detect_bench"
harness = false

[[bench]]
name = "convert_bench"
harness = false
